# nota_desktop

./: README.md  config.json  pubspec.yaml
lib/: main.dart
linux/: CMakeLists.txt  my_application.cc
messages/: get_all_notes.proto  (+4 more)
native/hub/: Cargo.toml
native/hub/src/: lib.rs
native/hub/src/nota_credito/domain/: mod.rs
native/hub/src/nota_credito/domain/datasource/: nota_credito_datasource.rs
native/hub/src/nota_credito/domain/models/: get_by_dates_model.rs  get_by_id_model.rs  get_by_motive_model.rs  mod.rs  nota_credito_model.rs  total_recouded_model.rs
native/hub/src/nota_credito/domain/repository/: mod.rs  nota_credito_repository.rs
native/hub/src/nota_credito/infrastructure/: mod.rs
native/hub/src/nota_credito/infrastructure/containers/: containers.rs  mod.rs
native/hub/src/nota_credito/infrastructure/datasource/: mod.rs  nota_credito_datasource.rs
native/hub/src/nota_credito/infrastructure/manager/: mod.rs  nota_credito_manager.rs
native/hub/src/nota_credito/infrastructure/repository/: nota_credito_repository.rs
native/hub/src/nota_credito/infrastructure/tasks/: get_all_nota_credito_task.rs  get_by_dates_task.rs  get_by_id_nota_task.rs  get_by_motive_task.rs  get_price_by_type.rs  mod.rs
native/hub/src/shared/domain/: mod.rs  module_manager.rs  task_entity.rs  task_manager.rs
native/hub/src/shared/models/: error_request.rs  error_request2.rs  error_request3.rs  error_response.rs  mod.rs
native/hub/src/utils/: mod.rs
native/hub/src/utils/err/: header_error.rs  mod.rs  request_error.rs
native/hub/src/utils/helpers/env/: env.rs
(+31 files in other folders)
